# mapping_suppliers_test

./: .gitignore  pyproject.toml
mapping_suppliers/: Readme.md  clean.py  clean_sources.py  final.sql  final_process.py.back  final_process_1.py  full_manufacturer_required.py  full_names.py  main.py  map_qcr.py  names.py  notes_substances_suffixes.txt  queries.txt  sql_europe_union_usa.sql  sql_final.sql  sql_qf_supplier_sites_names.sql  sql_qf_supplier_sites_products.sql  te.py  test_fuzzy_product.py  tt.txt  tttttt.py  ultimate.py  union_usa_europe.py
mapping_suppliers/checks/: check_merged_file.py  check_product_candidates_diff.py  check_special_chars.py
mapping_suppliers/inputs/: audits.csv  cep_raw.csv  hikma-eu-file3April.csv  hikma_usa_new3April.csv  qcr_2024.csv  qcr_2025.csv  qf_supplier_sites.csv  qf_supplier_sites_full.csv  qualifyze_dwh_warehoupplier_mapping_to_qf.csv  us_dmf.csv
mapping_suppliers/utils/: batch_gen_util.py  batch_ret_util.py  config.py  fuzzy_matching.py  fuzzy_matching_old.py  str_processing.py
